/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package primus;

option java_outer_classname = "DataProto";
option java_package = "com.bytedance.primus.apiserver.proto";
option java_generate_equals_and_hash = true;

import "primus_common.proto";

message DataSpec {
  map<string, DataStreamSpec> dataStreamSpecs = 1;
  // states for recovery
  DataSavepoint data_savepoint = 2;
  int32 total_datastream_count = 3;
}

message DataStatus {
  map<string, DataStreamStatus> dataStreamStatuses = 2;
}

message DataStreamSpec {
  repeated DataSourceSpec dataSourceSpecs = 1;
}

message DataStreamStatus {
  enum DataStreamState {
    PENDING = 0;
    RUNNING = 1;
    SUCCEEDED = 2;
    FAILED = 3;
  }

  DataStreamState state = 1;
  float progress = 2;  // 0 ~ 1.0
  repeated DataSourceStatus data_source_statuses = 3;
}

message DataSourceSpec {
  int32 source_id = 1; // The unique data source id within a data stream
  string source = 2;   // The name of the data source

  oneof dataSource {
    FileSourceSpec fileSourceSpec = 10;
    KafkaSourceSpec kafkaSourceSpec = 20; // Experimental
  }
}

message DataSourceStatus {
  int32 source_id = 1; // The unique id of the DataSource within a data stream
  string report = 10;  // Human readable report for current status
}

message FileSourceSpec {
  string path_pattern = 1; // The directory containing input files
  string name_pattern = 2; // The file name filter, defaults to all files
  repeated string success_marker_patterns = 3; // Wait for expose

  // Optional: TimeRange instructs Primus to scan subdirectories with a sliding window.
  TimeRange time_range = 10;

  // Type specific configurations
  oneof input_type {
    RawInput raw_input = 40;
    TextInput text_input = 41;
    CustomizedInput customized_input = 80;
  }
  message RawInput {}
  message TextInput {}
  message CustomizedInput {
    string class_name = 1; // The class implementing FileDataSource
    map<string, string> params = 2;
  }

  // Advanced
  int32 rewind_skip_num = 100; // defaults to 0
}

message KafkaSourceSpec {
  enum KafkaMessageType {
    JSON = 0;
    PB = 1;
  }

  enum KafkaStartUpMode {
    GROUP_OFFSETS = 0;
    EARLIEST = 1;
    LATEST = 2;
    TIMESTAMP = 3;
  }

  message Topic {
    string topic = 2;
    string consumer_group = 3;
    map<string, string> config = 4;
    KafkaStartUpMode kafka_start_up_mode = 5;
    int64 start_up_timestamp = 6;
  }

  Topic topic = 1;
  KafkaMessageType kafka_message_type = 2;
}

message DataSavepointSpec {
  string savepoint_dir = 1;
}

message DataSavepointStatus {
  enum DataSavepointState {
    PENDING = 0;
    RUNNING = 1;
    SUCCEEDED = 2;
    FAILED = 3;
  }

  DataSavepointState state = 1;
}

message DataSavepoint {
  string restore_id = 1;
  DataSavepointSpec data_savepoint_spec = 2;
}
